# SHA3

./: .gitignore  LICENSE  README  jh.cabal  main.hs  sha3-candidates.cabal
Data/BigWord/: Word128.hs
Data/Digest/: Groestl.hs  Groestl224.hs  Groestl256.hs  Groestl384.hs  Groestl512.hs  GroestlMutable.hs  GroestlTables.hs  JH224.hs  JH256.hs  JH384.hs  JH512.hs  JHInternal.hs  JHInternal.hs.orig  JHInternal_Tuple_Block1024.hs  jh.hs  jh_bitslice.hs  jh_bitslice.hs~
Tests/: testframe.hs
Tests/KAT_MCT/jh/: LongMsgKAT_224_Error_inserted.txt
Tests/testvectors/jh/KAT_MCT/: ShortMsgKAT_224.txt
