Name:            jh
Version:         0.1
Cabal-Version:   >= 1.6
Tested-With:	 GHC == 7.0.3, GHC == 7.2.1
License:         BSD3
License-File:    LICENSE
Category:        Data, Cryptography
Stability:       Experimental
Build-Type:      Simple
Author:          Håkon Jacobsen
Maintainer:      Håkon Jacobsen <jacoben.haakon@gmail.com>
Homepage:        https://github.com/hakoja/SHA3
Synopsis:        An implementation of the SHA3 hash canditade JH.

Library
   Build-Depends: base == 4.*, bytestring >= 0.9, cereal, crypto-api, tagged, vector >= 0.9
   Extensions: BangPatterns, MultiParamTypeClasses, TypeFamilies
   GHC-Options: -Wall -O2
   GHC-Prof-Options: -auto-all
   Exposed-Modules: Data.Digest.JH224, Data.Digest.JH256, Data.Digest.JH384, Data.Digest.JH512
   Other-Modules: Data.Digest.JHInternal, Data.BigWord.Word128




